# simple-stack-implement

./: .gitignore  CMakeLists.txt  README.md
.CMake-Boilerplate/: INSTALLER.cmake  TESTING.cmake  project-config.cmake
executable/: CMakeLists.txt
executable/include/: main.hpp
executable/src/: main.cpp
executable/test/: CMakeLists.txt  TestExample.cpp
scripts/: compile.sh  format.sh  get_dependencies.sh
